# yesno-generator-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  yesno-generator.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  yesno-generator.rockspec  yesno-generator_sdk.lua  yesno-generator_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  yesnogenerator_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  yesnogenerator_sdk.py  yesnogenerator_types.py
py/core/: context.py  control.py  spec.py  utility_type.py
py/entity/: api_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  log_feature.py  metrics_feature.py  proxy_feature.py  rbac_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_api_direct.py  test_api_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  feature_init.py  fetcher.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_response.py  make_spec.py  param.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_path.py  prepare_query.py  result_headers.py  transform_request.py
rb/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  (+5 more)
(+404 files in other folders)
